# stripe-nosql

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  todo.txt
app/: render.yaml
app/api/: main.py
app/ui/: streamlit_app.py
docs/: mongosh.md  streamlit.md
scripts/: conn.py  gcs_to_mongo.py  mongo_queries.py
tests/: conftest.py  test_gcs_to_mongo.py
