[project]
name = "nosql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-cloud-storage>=3.1.0",
    "mongomock>=4.3.0",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "pytest>=8.3.5",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
